--- a/cpu/requirements.txt
+++ b/cpu/requirements.txt
@@ -3,4 +3,4 @@ statsmodels==0.13.*
 torch==1.12.1
 torchvision==0.13.*
 otter-grader==4.3.*
-Bottleneck==1.3.*
+git+https://github.com/COGS118A/quiz_module.git
